Aug 20 2013
    Restore main window state after all widgets has been hidden

Aug 19 2013
    Search supports 'Whole word' flag

Aug 13 2013
    Version, based on Qutepart

Oct 11 2012
    Switch off JavaScript in the Preview if necessary

Aug 29 2012
    Quickly search word under cursor

Aug 27 2012
    Preview reStructuredText

Aug 6 2012
    Remamed to Enki

Jun 7 2012
    Highlight search results with yellow in the editor

May 5 2012
    Open directories in File Browser, when drag-n-dropt to the main window

Apr 30 2012
    Locator. (File open dialog with bash-like tab completion)

Apr 7 2012
    Reopen recent files (File -> Recents menu)

Apr 5 2012
    Move lines Up and Down

Apr 2 2012
    C++ header/implementation switcher

Apr 1 2012
    Expland/Collapse all; Check/Uncheck all buttons on search results dock

Mar 25 2012
    Restore position in the file when repopening it

Mar 23 2012
    Restore session

Mar 22 2012
    Printing is supported

Mar 17 2012
    Removed dependency on ConfigObj

Mar 16 2012
    Paste line functionality.

Mar 9 2012
    Highlight focused GUI widgets with red border

Mar 5 2012
    Highlight search in direcoty results in the list with yellow background

Feb 5 2012
    Support +N spec to go to particular line of the file

Jan 22 2012
    Removed dependency on binary fresh package

Jan 14 2012
    MIT Scheme plugin

Dec 13 2011
    Replace with submatches

Nov 21 2011
    First public release. Basic text editor