@@ -1,3 +1,6 @@
+Aug 21 2013
+    Highlight word under cursor search results with yellow
+
 Aug 20 2013
     Restore main window state after all widgets has been hidden
 
